@@ -9,6 +9,7 @@ module Remote.Hook (remote) where
 
 import qualified Data.ByteString.Lazy as L
 import qualified Data.Map as M
+import qualified Data.AssocList as A
 import System.Environment
 
 import Common.Annex
@@ -77,8 +78,7 @@ hookSetup mu c = do
 hookEnv :: Action -> Key -> Maybe FilePath -> IO (Maybe [(String, String)])
 hookEnv action k f = Just <$> mergeenv (fileenv f ++ keyenv)
   where
-	mergeenv l = M.toList . M.union (M.fromList l) 
-		<$> M.fromList <$> getEnvironment
+	mergeenv l = A.addEntries l <$> getEnvironment
 	env s v = ("ANNEX_" ++ s, v)
 	keyenv = catMaybes
 		[ Just $ env "KEY" (key2file k)
